# memobot

./: .dockerignore  .env.example  .github_banner.txt  .gitignore  Dockerfile  README.md  build-docker.sh  docker-compose.yml  main.py  pyproject.toml
docs/: AGENTIC_PROGRAMMING.md  CALENDAR_INTEGRATION.md  DEPLOYMENT.md  DISCORD_SETUP.md  DOCKER_DEPLOYMENT.md  EXTENDING_AGENT.md  QUICKSTART.md  SECURITY_AUDIT.md  WEATHER_INTEGRATION.md
src/: agent.py  agent_prompt.py  agent_tools.py  discord_bot.py  notion.py  openai_parser.py
src/models/: __init__.py  entries.py  enums.py
src/tools/: __init__.py  calendar_tools.py  create_tools.py  query_tools.py  weather_tools.py
tests/: fetch_latest.py  test_agent.py  test_calendar.py  test_parser.py  test_weather.py
